// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

const foo: { bar: number } | null = null;
const bar = foo!!!.bar;
            ~~~~~ Forbidden extra non-null assertion.
            ~~~~ Forbidden extra non-null assertion.
"
`;

exports[` 2`] = `
"Incorrect

function foo(bar: number | undefined) {
  const bar: number = bar!!!;
                      ~~~~~ Forbidden extra non-null assertion.
                      ~~~~ Forbidden extra non-null assertion.
}
"
`;

exports[` 3`] = `
"Incorrect

function foo(bar?: { n: number }) {
  return bar!?.n;
         ~~~~ Forbidden extra non-null assertion.
}
"
`;

exports[` 4`] = `
"Correct

const foo: { bar: number } | null = null;
const bar = foo!.bar;
"
`;

exports[` 5`] = `
"Correct

function foo(bar: number | undefined) {
  const bar: number = bar!;
}
"
`;

exports[` 6`] = `
"Correct

function foo(bar?: { n: number }) {
  return bar?.n;
}
"
`;
